<resources>
    <string name="app_name">KotlinTemplates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_template_title">LoginTemplates</string>
    <string name="basic_login_item">BasicLogin</string>
    <string name="navigation_item_2">Registration</string>
    <string name="navigation_item15">Lists</string>
    <string name="navigation_item_16">LazyList</string>
    <string name="navigation_item_19">RoomDBList</string>
    <string name="navigation_item_18">GridList</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="navigation_item_tab_template">Tabs</string>
    <string name="navigation_item_retro_list">RetroList</string>
    <string name="title_activity_sliding_menu_type2">SlidingMenuType2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
